Don't format Helm templates
Signed-off-by: Romain Barissat <romain-noreply@barissat.com>

--- a/private_Library/private_Application Support/private_VSCodium/User/settings.json
+++ b/private_Library/private_Application Support/private_VSCodium/User/settings.json
@@ -139,6 +139,9 @@
   "[yaml]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[helm]": {
+    "editor.formatOnSave": false
+  },
   "[terraform]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "hashicorp.terraform"
